--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,18 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "angular2-flash-messages": "^3.0.1",
+    "angular2-jwt": "^0.2.3",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "i": "^0.3.6",
+    "ngx-bootstrap": "^3.1.4",
+    "ngx-toastr": "^9.1.1",
+    "npm": "^6.5.0",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "toastr": "^2.1.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
